# autojournal

./: .gitignore  CONFIG.md  Makefile  README.md  autojournal.py  autojournal.sh  goals_checkbox_test.md  goals_clean.md  goals_roundtrip_test.md  goals_test.md  pyproject.toml  sample-journal-2025-06-02.md
autojournal/: __init__.py  cli_config.py  config.py  goal_manager.py  journal_manager.py  models.py  notifier.py  screenshot_analyzer.py  tui.py
tests/: __init__.py  test_goal_manager.py  test_journal_manager.py  test_models.py  test_orgmode_exporter.py  test_screenshot_analyzer.py
