[project]
name = "autojournal"
version = "0.1.0"
description = "An intelligent productivity tracking system that monitors your daily progress towards goals through automated screen analysis and journaling"
authors = [
    {name = "Danny", email = "danny@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "llm>=0.13.0",
    "textual>=0.45.0",
    "pillow>=10.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "anthropic>=0.3.0",
    "llm-anthropic>=0.17",
    "llm-gemini>=0.21",
]

[project.scripts]
autojournal = "autojournal:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
